--- a/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
@@ -90,6 +90,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Ir para lista de livros já catalogados</a>
 </div>
 
