--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Novateca.Web.Models.ApplicationUser
 
-
 @{
     var ErrorLoginMessage = TempData["ErrorLoginMessage"];
 }
@@ -10,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Novateca</title>
+    <title>@ViewData["Title"]Novateca </title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -24,22 +23,23 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" 
-         style="background-color: white; height: 18%; border-color: white;">
+    <nav class="navbar navbar-inverse navbar-fixed-top"
+         style="background-color:#4169E1  !important;
+                height: 15%; border-color: white;">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
-                     <img src="~/images/logo.png" style="width: 80px; height: 80px"/>
-                </a>
-            </div>
-           
-            <div class="navbar-collapse collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                <img src="~/images/logo.png" style="width:120px; height: 65px" />
+            </a>
+        </div>
+            <div class="collapse navbar-collapse collapse justify-content-end" id="navbarCollapse">
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
@@ -49,24 +49,47 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <!-- Footer -->
-
     </div>
-    <footer class="page-footer">
+    <nav class="navbar navbar-inverse navbar-fixed-bottom" style="height: 10px; border-color: white;">
+    <section id="footer">
+        <div class="container">
+            <div class="row text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-10 col-sm-10 col-md-10 mt-10 mt-sm-10 text-left text-white">
+                    <p><u><a href="#">Novateca. 2018</a></u></p>
+                </div>
+                <div class="col-xs-2 col-sm-2 col-md-2">
+                    @*<h5>Quick links</h5>*@
+                    <ul class="list-unstyled quick-links">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Suporte</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre nós</a></li>
+                        @*<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+                <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+                <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>*@
+                    </ul>
+                </div>
 
-        <!-- Footer Links -->
-        <div class="container-fluid text-center text-md-right">
-            <!-- <div class="navbar-collapse collapse"> -->
-            <ul class="nav navbar navbar-default  navbar-fixed-bottom" role="navigation">
-                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Suporte</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre nós</a></li>
-            </ul>
-            
+
+            </div>
+            <div class="row">
+                @*<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <ul class="list-unstyled list-inline social text-center">
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
+                        <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
+                    </ul>
+                </div>*@
+
+            </div>
+            <div class="row">
+               
+            </div>
         </div>
-        <!-- Footer Links -->
-    </footer>
-   
+    </section>
+    </nav>
+    <!-- ./Footer -->
+
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
