--- a/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
@@ -29,101 +29,117 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <p style="font-family: Britannic Bold; padding: 0px;">Multimídias</p>
+            <p style="font-family: 'Arial Rounded MT'; padding: 0px;">Multimídias</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+            <a asp-area="" asp-controller="Multimedias" asp-action="Create" class="navbar-brand">
+                Empréstimos
+            </a>
         </div>
     </div>
     <!-- Livros Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style=" border: 2px solid; ">
+         style="border: 2px solid;">
         <div class="row" style="height: 110px;">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <a asp-area="" asp-controller="Books" asp-action="Index" class="navbar-brand">
-                    <img src="~/images/livros.png" style="width: 100px; height: 100px" />
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                <a asp-area="" asp-controller="Livros" asp-action="Index" class="navbar-brand">
+                    <img src="~/images/livros.png" style="width: 100px; height: 100px;" />
                 </a>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="Books" asp-action="Create" class="navbar-brand">
                     <img src="~/images/add.png" style="width: 30px; height: 30px; " />
                 </a>
 
             </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="Books" asp-action="Index" class="navbar-brand">
                     <img src="~/images/list.png" style="width: 25px; height: 25px" />
                 </a>
             </div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <p style="font-family: Britannic Bold; padding: 0px;">Livros</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+            <a asp-area="" asp-controller="Multimedias" asp-action="Create" class="navbar-brand">
+                Empréstimos
+            </a>
         </div>
     </div>
     <!--  Periódicos Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style=" border: 2px solid;">
+         style="border: 2px solid;">
         <div class="row" style="height: 110px;">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <a asp-area="" asp-controller="Newspapers" asp-action="Index" class="navbar-brand">
                     <img src="~/images/periodicos.png" style="width: 100px; height: 100px;" />
                 </a>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="Newspapers" asp-action="Create" class="navbar-brand">
                     <img src="~/images/add.png" style="width: 30px; height: 30px; " />
                 </a>
 
             </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="Newspapers" asp-action="Index" class="navbar-brand">
                     <img src="~/images/list.png" style="width: 25px; height: 25px" />
                 </a>
             </div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <p style="font-family: Britannic Bold; padding: 0px;">Periódicos</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+            <a asp-area="" asp-controller="Multimedias" asp-action="Create" class="navbar-brand">
+                Empréstimos
+            </a>
         </div>
     </div>
     <!-- Usuários Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style=" border: 2px solid;">
-        <div class="row" style="height: 90px;">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+         style="border: 2px solid;">
+        <div class="row" style="height: 110px;">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <a asp-area="" asp-controller="ApplicationUsers" asp-action="Index" class="navbar-brand">
-                    <img src="~/images/users.png" style="width: 80px; height: 80px;" />
+                    <img src="~/images/users.png" style="width: 100px; height: 100px;" />
                 </a>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="ApplicationUsers" asp-action="Create" class="navbar-brand">
                     <img src="~/images/add.png" style="width: 30px; height: 30px; " />
                 </a>
 
             </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                 <a asp-area="" asp-controller="ApplicationUsers" asp-action="Index" class="navbar-brand">
                     <img src="~/images/list.png" style="width: 25px; height: 25px" />
                 </a>
             </div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <p style="font-family: Britannic Bold; padding: 0px;">Controle de Usuários</p>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+            <p style="font-family: Britannic Bold; padding: 0px;">Usuários</p>
         </div>
     </div>
+    
     <!-- Configurações -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
          style=" border: 2px solid; ">
         <div class="row" style="height:125px;">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <a asp-area="" asp-controller="Admin" asp-action="Config" class="navbar-brand">
                     <img src="~/images/config.png" style="width: 100px; height: 100px;" />
                 </a>
             </div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <p style="font-family: Britannic Bold; padding: 20px;">Configurações</p>
         </div>
     </div>
