--- a/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
@@ -10,10 +10,10 @@
 }*@
 <h2>@ViewData["Title"]</h2>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="color: midnightblue">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Logue-se com uma conta local.</h4>
+                <h4 style="font-size: 22px; color: darkslateblue"><b>Logue-se com uma conta local.</b></h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Entrar</button>
+                    <button type="submit"class="btn btn-primary">Entrar</button>
                 </div>
                 <div class="form-group">
                     <p>
