--- a/Novateca.Web/Novateca.Web/Views/ApplicationUsers/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/ApplicationUsers/Edit.cshtml
@@ -12,59 +12,59 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label">Primeiro nome:</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Último nome:</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User_CPF" class="control-label"></label>
+                <label asp-for="User_CPF" class="control-label">CPF:</label>
                 <input asp-for="User_CPF" class="form-control" />
                 <span asp-validation-for="User_CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLProfilePicture" class="control-label"></label>
+                <label asp-for="URLProfilePicture" class="control-label">Caminho da foto de perfil:</label>
                 <input asp-for="URLProfilePicture" class="form-control" />
                 <span asp-validation-for="URLProfilePicture" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
+                <label asp-for="UserName" class="control-label">Username:</label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="NormalizedUserName" class="control-label"></label>
                 <input asp-for="NormalizedUserName" class="form-control" />
                 <span asp-validation-for="NormalizedUserName" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="NormalizedEmail" class="control-label"></label>
                 <input asp-for="NormalizedEmail" class="form-control" />
                 <span asp-validation-for="NormalizedEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="EmailConfirmed" /> @Html.DisplayNameFor(model => model.EmailConfirmed)
                     </label>
                 </div>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="PasswordHash" class="control-label"></label>
                 <input asp-for="PasswordHash" class="form-control" />
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="SecurityStamp" class="control-label"></label>
                 <input asp-for="SecurityStamp" class="form-control" />
                 <span asp-validation-for="SecurityStamp" class="text-danger"></span>
@@ -73,19 +73,19 @@
                 <label asp-for="ConcurrencyStamp" class="control-label"></label>
                 <input asp-for="ConcurrencyStamp" class="form-control" />
                 <span asp-validation-for="ConcurrencyStamp" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
+                <label asp-for="PhoneNumber" class="control-label">Telefone de contato:</label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="PhoneNumberConfirmed" /> @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
                     </label>
                 </div>
-            </div>
+            </div>*@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
@@ -93,25 +93,25 @@
                     </label>
                 </div>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="LockoutEnd" class="control-label"></label>
                 <input asp-for="LockoutEnd" class="form-control" />
                 <span asp-validation-for="LockoutEnd" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            @*</div>*@
+            @*<div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="LockoutEnabled" /> @Html.DisplayNameFor(model => model.LockoutEnabled)
                     </label>
                 </div>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="AccessFailedCount" class="control-label"></label>
                 <input asp-for="AccessFailedCount" class="form-control" />
                 <span asp-validation-for="AccessFailedCount" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Atualizar cadastro" class="btn btn-default" />
             </div>
         </form>
     </div>
