--- a/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
@@ -105,7 +105,7 @@
     @foreach (var item in Model)
     {
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-        <div class="card" style="width: 250px; border: solid; border-color: dimgray; background-color: lightgray; border-radius: 5px;">
+        <div class="card" style="width: 250px; border: solid; border-color: aliceblue; border-radius: 5px;">
             <img class="card-img-top" src="@Html.DisplayFor(modelItem => item.URLImage)" alt="Card image cap"
                  style="width:230px; height:200px; margin: 5px;"><br />
             <div class="card-body" style="margin:5px;">
