--- a/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @using Novateca.Web.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-@if (SignInManager.IsSignedIn(User))
+@*@if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
@@ -16,12 +16,11 @@
     </form>
 }
 else
-{
+{*@
     <ul class="nav navbar-nav navbar-right" 
-        style="color: dodgerblue; font-family: Britannic Bold; font-size: 20px; margin-top: 2%;
-        font-weight: bold;
-       ">
+        style="font-family: Britannic Bold; font-size: 20px; margin-top: 2%;
+               font-weight: bold;">
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Entrar</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Cadastrar</a></li>
     </ul>
-}
+@*}*@
