--- a/Novateca.Web/Novateca.Web/wwwroot/css/site.css
+++ b/Novateca.Web/Novateca.Web/wwwroot/css/site.css
@@ -1,19 +1,26 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 150px;
-    padding-bottom: 40px;
+    padding-top: 110px;
+    padding-bottom: 10px;
+    background-image: url(../images/background-site.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    height: 800px;
+    background-position: center top;
+    background-attachment: fixed;
+    /*font-family: Arial Rounded MT Bold;*/
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 0px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: black;
+    color: ghostwhite;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
@@ -22,8 +29,6 @@ body {
 
 a:link {
     text-decoration: none;
-    color: black;
-    font-style: unset;
     display: inline-block;
     float: none;
 }
@@ -41,23 +46,98 @@ a:active {
 a:hover {
     text-decoration: underline;
     color: lightslategray;
-} 
-
-.page-footer {
-    position: fixed;
-    background-color: white;
-    font-size: 14px;
-    bottom: 0px;
-    width: 100%;
-    height: 30px;
-    margin: 0;
-    padding-right: 0;
 }
 
-.nav > li > a:focus, .nav > li > a:hover {
+
+/*.nav > li > a:focus, .nav > li > a:hover {
     text-decoration: none;
     background-color: transparent !important;
+}*/
+
+/*section {
+    padding: 60px 0;
+}*/
+
+    /*section .section-title {
+        text-align: center;
+        color: #007b5e;
+        margin-bottom: 50px;
+        text-transform: uppercase;
+    }*/
+
+#footer {
+    background: #4169E1 !important;
 }
+
+#footer a {
+    color: #ffffff;
+
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+    margin-top: 10px;
+    padding-right: 12px;
+}
+
+
+    /*#footer ul.social li {
+        padding: 3px 0;
+    }
+
+        #footer ul.social li a i {
+            margin-right: 5px;
+            font-size: 25px;
+            -webkit-transition: .5s all ease;
+            -moz-transition: .5s all ease;
+            transition: .5s all ease;
+        }
+
+        #footer ul.social li:hover a i {
+            font-size: 30px;
+            margin-top: -10px;
+        }
+
+        #footer ul.social li a,
+        #footer ul.quick-links li a {
+            color: #ffffff;
+        }*/
+
+            /*#footer ul.social li a:hover {
+                color: #eeeeee;
+            }*/
+
+#footer ul.quick-links li {
+    /*padding: 3px 0;*/
+    /*-webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;*/
+    /*transition: .5s all ease;*/
+    display: inline-block;
+    padding: 5px;
+}
+
+#footer ul.quick-links li:hover {
+    padding: 3px 0;
+    margin-left: 5px;
+    font-weight: 700;
+         
+}
+
+    /*#footer ul.quick-links li a i {
+        margin-right: 5px;
+    }*/
+
+    /*#footer ul.quick-links li:hover a i {
+        font-weight: 700;
+    }*/
+
+/*@media (max-width:767px) {
+#footer h5 {
+    padding-left: 0;
+    border-left: transparent;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+}
+}*/
 
 
 
