--- a/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <p style="font-family: Britannic Bold; padding: 0px;">Livros</p>
+            <p style="font-family: 'Arial Rounded MT'; padding: 0px;">Livros</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <a asp-area="" asp-controller="Multimedias" asp-action="Create" class="navbar-brand">
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <p style="font-family: Britannic Bold; padding: 0px;">Periódicos</p>
+            <p style="font-family: 'Arial Rounded MT'; padding: 0px;">Periódicos</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <a asp-area="" asp-controller="Multimedias" asp-action="Create" class="navbar-brand">
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <p style="font-family: Britannic Bold; padding: 0px;">Usuários</p>
+            <p style="font-family: 'Arial Rounded MT'; padding: 0px;">Usuários</p>
         </div>
     </div>
     
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <p style="font-family: Britannic Bold; padding: 20px;">Configurações</p>
+            <p style="font-family: 'Arial Rounded MT'; padding: 20px;">Configurações</p>
         </div>
     </div>
     @*<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
