--- a/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
@@ -116,7 +116,10 @@
                 <p class="card-abstract text-center" style="font-size: 10px">@Html.DisplayFor(modelItem => item.Abstract)</p>
                 <div class="card-options text-center">
                     <a asp-action="Edit" asp-route-id="@item.BookID"><img src="~/images/edit.png" style="width:30px; height:30px; padding-right: 5px" /></a>
-                    <a asp-action="Delete" asp-route-id="@item.BookID"><img src="~/images/remove.png" style="width:30px; height:30px; padding-left: 5px" /></a>|
+                    <a asp-action="Edit" asp-route-id="@item.BookID"><img src="~/images/like.png" style="width:30px; height:30px; padding-right: 5px" /></a>
+                    <a asp-action="Edit" asp-route-id="@item.BookID"><img src="~/images/comment.png" style="width:30px; height:30px; padding-right: 5px" /></a>
+                    <a asp-action="Edit" asp-route-id="@item.BookID"><img src="~/images/favorite.png" style="width:30px; height:30px; padding-right: 5px" /></a>
+                    <a asp-action="Delete" asp-route-id="@item.BookID"><img src="~/images/remove.png" style="width:30px; height:30px; padding-left: 5px" /></a>
                 </div>
             </div>
         </div>
