--- a/Novateca.Web/Novateca.Web/Views/Books/Details.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Details.cshtml
@@ -49,7 +49,7 @@
                         Local de Publicação:
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.Locate)
+                        @Html.DisplayFor(model => model.PlaceOfPublication)
                     </dd>
                     <dt>
                         Editora:
@@ -61,7 +61,7 @@
                         Ano:
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.Year)
+                        @Html.DisplayFor(model => model.YearOfPublication)
                     </dd>
                     <dt>
                         Total de páginas:
@@ -73,7 +73,7 @@
                         Assunto:
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.Subject)
+                        @Html.DisplayFor(model => model.BookSubject)
                     </dd>
                     <dt>
                         Caminho da capa:
