--- a/Novateca.Web/Novateca.Web/Views/Multimedias/Delete.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Multimedias/Delete.cshtml
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.Director)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Locate)
+            @Html.DisplayNameFor(model => model.PlaceOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Locate)
+            @Html.DisplayFor(model => model.PlaceOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PublishingCompany)
@@ -49,10 +49,10 @@
             @Html.DisplayFor(model => model.PublishingCompany)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Year)
+            @Html.DisplayNameFor(model => model.YearOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Year)
+            @Html.DisplayFor(model => model.YearOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PhysicalDescription)
@@ -61,10 +61,10 @@
             @Html.DisplayFor(model => model.PhysicalDescription)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Subject)
+            @Html.DisplayNameFor(model => model.MultimediaSubject)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Subject)
+            @Html.DisplayFor(model => model.MultimediaSubject)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Abstract)
