--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Delete.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Edition)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Locate)
+            @Html.DisplayNameFor(model => model.PlaceOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Locate)
+            @Html.DisplayFor(model => model.PlaceOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PublishingCompany)
@@ -43,10 +43,10 @@
             @Html.DisplayFor(model => model.PublishingCompany)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Subject)
+            @Html.DisplayNameFor(model => model.NewspaperSubject)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Subject)
+            @Html.DisplayFor(model => model.NewspaperSubject)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CurrentPeriodicity)
