--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Edit.cshtml
@@ -30,9 +30,9 @@
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label"></label>
-                <input asp-for="Locate" class="form-control" />
-                <span asp-validation-for="Locate" class="text-danger"></span>
+                <label asp-for="PlaceOfPublication" class="control-label"></label>
+                <input asp-for="PlaceOfPublication" class="form-control" />
+                <span asp-validation-for="PlaceOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishingCompany" class="control-label"></label>
@@ -40,9 +40,9 @@
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label"></label>
-                <input asp-for="Subject" class="form-control" />
-                <span asp-validation-for="Subject" class="text-danger"></span>
+                <label asp-for="NewspaperSubject" class="control-label"></label>
+                <input asp-for="NewspaperSubject" class="form-control" />
+                <span asp-validation-for="NewspaperSubject" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ISSN" class="control-label">ISSN:</label>
