--- a/Novateca.Web/Novateca.Web/Views/Books/Delete.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Delete.cshtml
@@ -43,10 +43,10 @@
             @Html.DisplayFor(model => model.Edition)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Locate)
+            @Html.DisplayNameFor(model => model.PlaceOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Locate)
+            @Html.DisplayFor(model => model.PlaceOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PublishingCompany)
@@ -55,10 +55,10 @@
             @Html.DisplayFor(model => model.PublishingCompany)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Year)
+            @Html.DisplayNameFor(model => model.YearOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Year)
+            @Html.DisplayFor(model => model.YearOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.TotalPages)
@@ -67,10 +67,10 @@
             @Html.DisplayFor(model => model.TotalPages)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Subject)
+            @Html.DisplayNameFor(model => model.BookSubject)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Subject)
+            @Html.DisplayFor(model => model.BookSubject)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.URLImage)
