--- a/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
@@ -38,9 +38,9 @@
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label">Local da Publicação:</label>
-                <input asp-for="Locate" class="form-control" />
-                <span asp-validation-for="Locate" class="text-danger"></span>
+                <label asp-for="PlaceOfPublication" class="control-label">Local da Publicação:</label>
+                <input asp-for="PlaceOfPublication" class="form-control" />
+                <span asp-validation-for="PlaceOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishingCompany" class="control-label">Editora:</label>
@@ -48,9 +48,9 @@
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label">Ano:</label>
-                <input asp-for="Year" class="form-control" />
-                <span asp-validation-for="Year" class="text-danger"></span>
+                <label asp-for="YearOfPublication" class="control-label">Ano:</label>
+                <input asp-for="YearOfPublication" class="form-control" />
+                <span asp-validation-for="YearOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TotalPages" class="control-label">Total de páginas:</label>
@@ -58,9 +58,9 @@
                 <span asp-validation-for="TotalPages" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label">Assunto:</label>
-                <input asp-for="Subject" class="form-control" />
-                <span asp-validation-for="Subject" class="text-danger"></span>
+                <label asp-for="BookSubject" class="control-label">Assunto:</label>
+                <input asp-for="BookSubject" class="form-control" />
+                <span asp-validation-for="BookSubject" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Abstract" class="control-label">Resumo: (opcional)</label>
