--- a/Novateca.Web/Novateca.Web/Views/Multimedias/Create.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Multimedias/Create.cshtml
@@ -32,9 +32,9 @@
                 <span asp-validation-for="Director" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label">Local:</label>
-                <input asp-for="Locate" class="form-control" />
-                <span asp-validation-for="Locate" class="text-danger"></span>
+                <label asp-for="PlaceOfPublication" class="control-label">Local:</label>
+                <input asp-for="PlaceOfPublication" class="form-control" />
+                <span asp-validation-for="PlaceOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishingCompany" class="control-label">Companhia Cinematográfica:</label>
@@ -42,9 +42,9 @@
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label">Ano:</label>
-                <input asp-for="Year" class="form-control" />
-                <span asp-validation-for="Year" class="text-danger"></span>
+                <label asp-for="YearOfPublication" class="control-label">Ano:</label>
+                <input asp-for="YearOfPublication" class="form-control" />
+                <span asp-validation-for="YearOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhysicalDescription" class="control-label">Descrição Física:</label>
@@ -52,9 +52,9 @@
                 <span asp-validation-for="PhysicalDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label">Gênero:</label>
-                <input asp-for="Subject" class="form-control" />
-                <span asp-validation-for="Subject" class="text-danger"></span>
+                <label asp-for="MultimediaSubject" class="control-label">Gênero:</label>
+                <input asp-for="MultimediaSubject" class="form-control" />
+                <span asp-validation-for="MultimediaSubject" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Abstract" class="control-label">Resumo:</label>
