--- a/Novateca.Web/Novateca.Web/Views/Multimedias/Details.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Multimedias/Details.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Director)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Locate)
+            @Html.DisplayNameFor(model => model.PlaceOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Locate)
+            @Html.DisplayFor(model => model.PlaceOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PublishingCompany)
@@ -48,10 +48,10 @@
             @Html.DisplayFor(model => model.PublishingCompany)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Year)
+            @Html.DisplayNameFor(model => model.YearOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Year)
+            @Html.DisplayFor(model => model.YearOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PhysicalDescription)
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.PhysicalDescription)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Subject)
+            @Html.DisplayNameFor(model => model.MultimediaSubject)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Subject)
+            @Html.DisplayFor(model => model.MultimediaSubject)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Abstract)
