--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Create.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Create.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label">Local de Publicação:</label>
-                <input asp-for="Locate" class="form-control" />
-                <span asp-validation-for="Locate" class="text-danger"></span>
+                <label asp-for="PlaceOfPublication" class="control-label">Local de Publicação:</label>
+                <input asp-for="PlaceOfPublication" class="form-control" />
+                <span asp-validation-for="PlaceOfPublication" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishingCompany" class="control-label">Editora:</label>
@@ -38,9 +38,9 @@
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label">Assunto:</label>
-                <input asp-for="Subject" class="form-control" />
-                <span asp-validation-for="Subject" class="text-danger"></span>
+                <label asp-for="NewspaperSubject" class="control-label">Assunto:</label>
+                <input asp-for="NewspaperSubject" class="form-control" />
+                <span asp-validation-for="NewspaperSubject" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ISSN" class="control-label">ISSN:</label>
