--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Details.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Edition)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Locate)
+            @Html.DisplayNameFor(model => model.PlaceOfPublication)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Locate)
+            @Html.DisplayFor(model => model.PlaceOfPublication)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PublishingCompany)
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.PublishingCompany)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Subject)
+            @Html.DisplayNameFor(model => model.NewspaperSubject)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Subject)
+            @Html.DisplayFor(model => model.NewspaperSubject)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CurrentPeriodicity)
@@ -62,6 +62,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.NewspaperID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.NewspaperID">Editar</a> |
+    <a asp-action="Index">Voltar para lista</a>
 </div>
